--- a/index.html
+++ b/index.html
@@ -178,28 +178,99 @@
                             <p>3D Box Viewer</p>
                         </aside>
                     </section>
-                </section>
 
-                <section>
-                    <section data-background="images/map_06_terrain_darmstadt_l9.png" class="box">
+                    <section data-background="images/map_05_terrain_darmstadt_l8.png" class="box">
                         <img class="stretch" src="./images/v-manip_slice_viewer.png"/>
                         <aside class="notes">
                         </aside>
                     </section>
-                    <!-- TODO
-                        V-Manip FSC polygon download
-                        DREAM Jordan over time; Capian sea bounding box problem
-                        Cryoland daily FSC since end of 2000 -> EO-WCS
-                    -->
+                </section>
 
-                    <section data-background="images/map_07_terrain_darmstadt_l10.png" class="box">
-                        <img class="stretch" src="./images/v-manip_tutorial.png"/>
+                <section>
+                    <section data-background="images/map_06_terrain_darmstadt_l9.png" class="box">
+                        <img class="stretch" src="./images/v-manip_download_1.png"/>
                         <aside class="notes">
                         </aside>
                     </section>
 
+                    <section data-background="images/map_06_terrain_darmstadt_l9.png" class="box">
+                        <img class="stretch" src="./images/v-manip_download_2.png"/>
+                        <aside class="notes">
+                        </aside>
+                    </section>
+
+                    <section data-background="images/map_06_terrain_darmstadt_l9.png" class="box">
+                        <img class="stretch" src="./images/v-manip_download_3.png"/>
+                        <aside class="notes">
+                        </aside>
+                    </section>
+
+                    <section data-background="images/map_06_terrain_darmstadt_l9.png" class="box">
+                        <img class="stretch" src="./images/v-manip_tutorial.png"/>
+                        <aside class="notes">
+                        </aside>
+                    </section>
+                </section>
+
+                <section>
+                    <section data-background="images/map_07_terrain_darmstadt_l10.png" class="box">
+                        <img class="stretch" src="./images/dream_jordan_1.png"/>
+                        <aside class="notes">
+                        </aside>
+                    </section>
+
+                    <section data-background="images/map_07_terrain_darmstadt_l10.png" class="box">
+                        <img class="stretch" src="./images/dream_jordan_2.png"/>
+                        <aside class="notes">
+                        </aside>
+                    </section>
+
+                    <section data-background="images/map_07_terrain_darmstadt_l10.png" class="box">
+                        <img class="stretch" src="./images/dream_jordan_3.png"/>
+                        <aside class="notes">
+                        </aside>
+                    </section>
+
+                    <section data-background="images/map_07_terrain_darmstadt_l10.png" class="box">
+                        <img class="stretch" src="./images/dream_jordan_4.png"/>
+                        <aside class="notes">
+                        </aside>
+                    </section>
+
+                    <section data-background="images/map_07_terrain_darmstadt_l10.png" class="box">
+                        <img class="stretch" src="./images/dream_jordan_5.png"/>
+                        <aside class="notes">
+                        </aside>
+                    </section>
+                </section>
+
+                <section>
+                    <section data-background="images/map_07_terrain_darmstadt_l10.png" class="box">
+                        <img class="stretch" src="./images/dream_caspian_1.png"/>
+                        <aside class="notes">
+                        </aside>
+                    </section>
+
+                    <section data-background="images/map_07_terrain_darmstadt_l10.png" class="box">
+                        <img class="stretch" src="./images/dream_caspian_2.png"/>
+                        <aside class="notes">
+                        </aside>
+                    </section>
+
+                    <section data-background="images/map_07_terrain_darmstadt_l10.png" class="box">
+                        <img class="stretch" src="./images/dream_caspian_3.png"/>
+                        <aside class="notes">
+                        </aside>
+                    </section>
+                </section>
+
+                <section>
                     <section data-background="images/map_08_terrain_darmstadt_l11.png" class="box">
-                        <img class="stretch" src="./images/dream_timeline.png"/>
+                        <img class="stretch" src="./images/cryoland_1.png"/>
+                    </section>
+
+                    <section data-background="images/map_08_terrain_darmstadt_l11.png" class="box">
+                        <img class="stretch" src="./images/cryoland_2.png"/>
                     </section>
                 </section>
 
